[gd_scene load_steps=30 format=3 uid="uid://ce6vcfst4e4h7"]

[ext_resource type="Script" path="res://Scenes/gobbo.gd" id="1_x6l63"]
[ext_resource type="Texture2D" uid="uid://blbxfewv71gcs" path="res://Assets/goblin.png" id="2_2sgwd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6aa7u"]
atlas = ExtResource("2_2sgwd")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y652n"]
atlas = ExtResource("2_2sgwd")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa1lh"]
atlas = ExtResource("2_2sgwd")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eecqp"]
atlas = ExtResource("2_2sgwd")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7i4i"]
atlas = ExtResource("2_2sgwd")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki6s2"]
atlas = ExtResource("2_2sgwd")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_noggg"]
atlas = ExtResource("2_2sgwd")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjac4"]
atlas = ExtResource("2_2sgwd")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i76ya"]
atlas = ExtResource("2_2sgwd")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nxg7"]
atlas = ExtResource("2_2sgwd")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjvx2"]
atlas = ExtResource("2_2sgwd")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf82i"]
atlas = ExtResource("2_2sgwd")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bagv"]
atlas = ExtResource("2_2sgwd")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8sra"]
atlas = ExtResource("2_2sgwd")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f02xk"]
atlas = ExtResource("2_2sgwd")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p3en"]
atlas = ExtResource("2_2sgwd")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_t2m03"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aa7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y652n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa1lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eecqp")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7i4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki6s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noggg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjac4")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i76ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nxg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjvx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf82i")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bagv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8sra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f02xk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p3en")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_20xyo"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_k1swh"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nklwm"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_06ofb"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oqwdn"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_atj4h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aihse"]
radius = 4.12311

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ekhxx"]
size = Vector2(118, 122)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rx6in"]
size = Vector2(32, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6fut"]
size = Vector2(6, 32)

[node name="Gobbo" type="CharacterBody2D"]
collision_layer = 517
collision_mask = 515
script = ExtResource("1_x6l63")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 4
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_t2m03")
animation = &"attack"
autoplay = "idle"

[node name="Up" type="Area2D" parent="."]
visible = false
collision_layer = 7
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
visible = false
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_20xyo")

[node name="Up_trap" type="Area2D" parent="."]
visible = false
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up_trap"]
visible = false
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_20xyo")

[node name="Down" type="Area2D" parent="."]
visible = false
collision_layer = 7
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
visible = false
position = Vector2(0, 13)
shape = SubResource("CircleShape2D_k1swh")

[node name="Down_trap" type="Area2D" parent="."]
visible = false
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down_trap"]
visible = false
position = Vector2(0, 13)
shape = SubResource("CircleShape2D_k1swh")

[node name="Left" type="Area2D" parent="."]
visible = false
collision_layer = 7
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
visible = false
position = Vector2(-15, 0)
shape = SubResource("CircleShape2D_nklwm")

[node name="Left_trap" type="Area2D" parent="."]
visible = false
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_trap"]
visible = false
position = Vector2(-15, 0)
shape = SubResource("CircleShape2D_nklwm")

[node name="Right" type="Area2D" parent="."]
visible = false
collision_layer = 7
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
visible = false
position = Vector2(16, 0)
shape = SubResource("CircleShape2D_06ofb")

[node name="Right_trap" type="Area2D" parent="."]
visible = false
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_trap"]
visible = false
position = Vector2(16, 0)
shape = SubResource("CircleShape2D_06ofb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_oqwdn")

[node name="Leave" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Leave"]
visible = false
shape = SubResource("CircleShape2D_atj4h")

[node name="Bumping_area" type="Area2D" parent="."]
visible = false
collision_layer = 16386
collision_mask = 16386

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumping_area"]
visible = false
shape = SubResource("CircleShape2D_aihse")

[node name="Center" type="Marker2D" parent="."]

[node name="Finder" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 519

[node name="CollisionShape2D" type="CollisionShape2D" parent="Finder"]
shape = SubResource("RectangleShape2D_ekhxx")

[node name="Neighbours_check" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Neighbours_check"]
shape = SubResource("RectangleShape2D_rx6in")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Neighbours_check"]
shape = SubResource("RectangleShape2D_s6fut")

[connection signal="body_entered" from="Neighbours_check" to="." method="_on_neighbours_check_body_entered"]
